Test for 5 discs.

--- a/TowerOfHanoi.ipynb
+++ b/TowerOfHanoi.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,33 +73,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Move disc from A to B!\n",
       "Move disc from A to C!\n",
-      "Move disc from B to C!\n",
       "Move disc from A to B!\n",
-      "Move disc from C to A!\n",
       "Move disc from C to B!\n",
-      "Move disc from A to B!\n",
       "Move disc from A to C!\n",
-      "Move disc from B to C!\n",
       "Move disc from B to A!\n",
-      "Move disc from C to A!\n",
       "Move disc from B to C!\n",
-      "Move disc from A to B!\n",
       "Move disc from A to C!\n",
-      "Move disc from B to C!\n"
+      "Move disc from A to B!\n",
+      "Move disc from C to B!\n",
+      "Move disc from C to A!\n",
+      "Move disc from B to A!\n",
+      "Move disc from C to B!\n",
+      "Move disc from A to C!\n",
+      "Move disc from A to B!\n",
+      "Move disc from C to B!\n",
+      "Move disc from A to C!\n",
+      "Move disc from B to A!\n",
+      "Move disc from B to C!\n",
+      "Move disc from A to C!\n",
+      "Move disc from B to A!\n",
+      "Move disc from C to B!\n",
+      "Move disc from C to A!\n",
+      "Move disc from B to A!\n",
+      "Move disc from B to C!\n",
+      "Move disc from A to C!\n",
+      "Move disc from A to B!\n",
+      "Move disc from C to B!\n",
+      "Move disc from A to C!\n",
+      "Move disc from B to A!\n",
+      "Move disc from B to C!\n",
+      "Move disc from A to C!\n"
      ]
     }
    ],
    "source": [
-    "Hanoi(4,\"A\",\"B\",\"C\")"
+    "Hanoi(5,\"A\",\"B\",\"C\")"
    ]
   },
   {
